Implement invite-only auth
